--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer class="footer">
-    Built for the Endless ecosystem · #EndlessDev
+    Built for the Endless ecosystem by Sa1 · #EndlessDev
   </footer>
 
   <script src="script.js"></script>
